Fix display of visibility and accessibility settings in create group modal

--- a/src/components/CreateGroup/CreateGroup.scss
+++ b/src/components/CreateGroup/CreateGroup.scss
@@ -151,7 +151,6 @@
 
     .selectedString {
       line-height: 24px;
-      padding-right: 15px;
     }
 
     b {
@@ -170,6 +169,10 @@
   .dropdownItemSelected {
     display: flex;
     align-items: center;
+
+    .selectedString {
+      padding-right: 20px;
+    }
 
     .dropdownDescription {
       font-size: 12px;
